Agregado contenido adicional a blog y una mejor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,13 @@
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres..... por ahora.</p>
                 <p>Suscribete y dale like</p>
+                <p>
+                    Barack Hussein Obama II​ es un político 
+                    estadounidense que ejerció como el 44.º presidente de los 
+                    Estados Unidos de América desde el 20 de enero de 2009 hasta
+                    el 20 de enero de 2017.​ Fue senador por el estado de Illinois desde 
+                    el 3 de enero de 2005 hasta su renuncia el 16 de noviembre de 2008.
+                </p>
             </div>
         </div>
     </body>
