Aguegue suscripcion2, cambie cabecera a maestro y puse texto azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de cabecera</span>
+                <span id="tagline">Tu blog maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
@@ -19,8 +19,9 @@
                     estadounidense que ejerció como el 44.º presidente de los 
                     Estados Unidos de América desde el 20 de enero de 2009 hasta
                     el 20 de enero de 2017.​ Fue senador por el estado de Illinois desde 
-                    el 3 de enero de 2005 hasta su renuncia el 16 de noviembre de 2008.
+                    el 3 de enero de 2005 hasta su renuncia el 16 de noviembre de 2008..
                 </p>
+                <p>Suscribete y dale like2</p>
             </div>
         </div>
     </body>
